--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,27 @@
 ---
+import logo from '../logo-green.png';
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Hell.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Hell</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title="Moor & Meor | Coming Soon....">
+	
+<div>
+	<div class="flex flex-col align-bottom h-screen bg-top bg-cover" style="background-image: url(/moor-yellow-ls.png)">
+		<div class="flex justify-center ">
+			<div class="pt-10 sm:pt-20 w-1/2 sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/4">
+				<img src={logo}  alt="moor & meor logo green"/>	
+			</div>
+		</div>
+	</div>
+		
+	</div>
+	<div class="-mt-40 mr-4 text-[#3A401D]">
+		<p class="text-right font-medium">Organic Clothing<br>Equipment<br>Adventures</p>
+		<p class="text-right ">Website coming soon...</p>
+		<p class="text-right ">Instagram @<a class=" underline hover:font-bold" href="https://www.instagram.com/moorandmeor/">moorandmeor</a></p>
+		<p class="text-right ">6 Chapel St, Hanoi, TR262LR</p>
+	</div>
+	</div>		
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
+	
+	
