--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import logo from '../logo-green.png';
+import logo from '/logo-green.png';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -19,7 +19,7 @@ import Layout from '../layouts/Layout.astro';
 		<p class="text-right font-medium">Organic Clothing<br>Equipment<br>Adventures</p>
 		<p class="text-right ">Website coming soon...</p>
 		<p class="text-right ">Instagram @<a class=" underline hover:font-bold" href="https://www.instagram.com/moorandmeor/">moorandmeor</a></p>
-		<p class="text-right ">6 Chapel St, Hanoi, TR262LR</p>
+		<p class="text-right ">6 Chapel St, St Ives, TR262LR</p>
 	</div>
 	</div>		
 </Layout>
