--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import logo from '/logo-green.png';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -9,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
 	<div class="flex flex-col align-bottom h-screen bg-top bg-cover" style="background-image: url(/moor-yellow-ls.png)">
 		<div class="flex justify-center ">
 			<div class="pt-10 sm:pt-20 w-1/2 sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/4">
-				<img src={logo}  alt="moor & meor logo green"/>	
+				<img src="/logo-green.png"  alt="moor & meor logo green"/>	
 			</div>
 		</div>
 	</div>
