change margin to fit mobile viewport

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ import Layout from '../layouts/Layout.astro';
 	</div>
 		
 	</div>
-	<div class="-mt-40 mr-4 text-[#DFBE90]">
-		<p class="text-right font-medium">Organic Clothing<br>Equipment<br>Adventures</p>
+	<div class="-mt-44 mr-4 sm:mr-12 text-[#DFBE90]">
+		<p class="text-right font-medium">Clothing<br>Equipment<br>Adventures</p>
 		<p class="text-right ">Website coming soon...</p>
 		<p class="text-right ">Instagram @<a class=" underline hover:font-bold" href="https://www.instagram.com/moorandmeor/">moorandmeor</a></p>
 		<p class="text-right ">6 Chapel St, St Ives, TR262LR</p>
