updaye margin for mobile viewports

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
 	</div>
 		
 	</div>
-	<div class="-mt-44 mr-4 sm:mr-12 text-[#DFBE90]">
+	<div class="-mt-48 sm:-mt-44 mr-4 sm:mr-12 text-[#DFBE90]">
 		<p class="text-right font-medium">Clothing<br>Equipment<br>Adventures</p>
 		<p class="text-right ">Website coming soon...</p>
 		<p class="text-right ">Instagram @<a class=" underline hover:font-bold" href="https://www.instagram.com/moorandmeor/">moorandmeor</a></p>
