--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,15 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Moor & Meor | Coming Soon....">
 	
 <div>
-	<div class="flex flex-col align-bottom h-screen bg-top bg-cover" style="background-image: url(/moor-green-ls.png)">
+	<div class="sm:hidden flex flex-col align-bottom h-screen bg-top bg-cover" style="background-image: url(/moor-green-p.png)">
+		<div class="flex justify-center ">
+			<div class="pt-10 sm:pt-20 w-2/3 sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/4">
+				<img src="/logo-green.png"  alt="moor & meor logo green"/>	
+			</div>
+		</div>
+	</div>
+	
+	<div class="hidden sm:block flex flex-col align-bottom h-screen bg-top bg-cover" style="background-image: url(/moor-green-ls.png)">
 		<div class="flex justify-center ">
 			<div class="pt-10 sm:pt-20 w-2/3 sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/4">
 				<img src="/logo-green.png"  alt="moor & meor logo green"/>	
